lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:4: error: not found: type list
var Liste:list[Point] = getSol()
          ^Lander:6: error: not found: value y
	 	if (y(Liste(i))==y(Liste(i+1))) {
                    ^Lander:7: error: too many arguments for method getSol: ()java.util.List[lessons.lander.universe.Point]
	 		debut=getSol(i)
                                    ^Lander:8: error: too many arguments for method getSol: ()java.util.List[lessons.lander.universe.Point]
	 		fin=getSol(i+1)
                                  ^