lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.code
def getLandingZone():Segment = {
var debut:Point = Point(0,0)
var fin:Point = Point(0,0)
var Liste:list[Point] = getSol()
	 for (i <- 0 to getSol().length-1) {
	 	if (y(Liste(i))==y(Liste(i+1))) {
	 		debut=getSol(i)
	 		fin=getSol(i+1)
	 	}
	 }
	 return Segment(debut,fin)
}
